<?xml version="1.0"?>
<package format="2">
  <name>diff_hardware_interface</name>
  <version>1.0.0</version>
  <description>Provides an interface between diff_drive_controller and dynamixel_wrapper.</description>
  <maintainer email="firstkafaizpangestu@gmail.com">Faiz Pangestu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>dynamixel_wrapper</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
